kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-service
spec:
  type: LoadBalancer
  selector:
    component: api-deployment
  ports:
    - name: api-deployment
      port: 8080
      targetPort: 5000
